framework page, updated team page

--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,7 @@ plugins:
 
 header_pages:
   - pages/demo.md
+  - pages/framework.md
   - pages/observational_data.md
   - pages/results.md
   - pages/paper.md
